Consertando o bug na hora de rodar a aplicação via Docker